Fix: fonts and spacing slightly off mock

--- a/globals.css
+++ b/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --base-font: calc(11px + 0.4vw);
+    --base-font: calc(11px + 0.3vw);
     --frame: 2rem;
     --easeOut: cubic-bezier(0, 0, 0.185, 0.995);
     --bgLight: 226, 226, 226;
